--- a/index.html
+++ b/index.html
@@ -506,8 +506,8 @@
     <div id="intro-layer">
         <div class="intro-text-container">
             <div class="intro-msg" id="msg1">MEMULAKAN SISTEM</div>
-            <div class="intro-msg" id="msg2">PACUAN WARP AKTIF</div>
-            <div class="intro-msg" id="msg3">SELAMAT DATANG ELITE</div>
+            <div class="intro-msg" id="msg2">PECUTAN AKTIF</div>
+            <div class="intro-msg" id="msg3">SELAMAT DATANG!</div>
         </div>
         <button class="skip-btn" onclick="endIntro()">BATAL PELANCARAN / LANGKAU</button>
     </div>
@@ -770,3 +770,4 @@
 </body>
 
 </html>
+
